[package]
name = "rust-html-parser-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
htmlstream = "0.1.3"
tl = { version = "0.7.7", features = ["simd"] }
html5ever = "0.26.0"
lol_html = "1.2.0"

[[bench]]
name = "bench"
harness = false

[patch.crates-io]
tl = { git = "https://github.com/clovexx/tl" }